Fix dropdown overflow

--- a/css/flexnav.css
+++ b/css/flexnav.css
@@ -57,7 +57,7 @@
     top: 0;
     right: 0;
     width: 50px;
-    height: 50px;
+    height: 40px;
     display: inline-block;
     background: #acaca1;
     background: rgba(0, 0, 0, 0.075);
@@ -66,14 +66,14 @@
       cursor: pointer; }
     .flexnav .touch-button .navicon {
       position: relative;
-      top: 1.4em;
+      top: .5em;
       font-size: 12px;
       color: #666; }
 
 .menu-button {
   position: relative;
   display: block;
-  padding: .75em;
+  padding: .5em;
   background: #a6a6a2;
   color: #222222;
   cursor: pointer;
@@ -96,7 +96,7 @@
     .menu-button .touch-button .navicon {
       font-size: 16px;
       position: relative;
-      top: 1em;
+      top: .5em;
       color: #666; }
 
 @media all and (min-width: 800px) {
